Gradient has been fixed on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -400,10 +400,6 @@ h1 {
 /*End quick info*/
 
 /*Start may be interesting*/
-#can-be-interesting {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 49%, rgba(0, 0, 0, 1) 100%);
-}
 
 #can-be-interesting h2 {
     line-height: 36px;
@@ -411,6 +407,8 @@ h1 {
     font-weight: 300;
     text-align: center;
     clear: both;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 49%, rgba(0, 0, 0, 1) 100%);
 }
 
 #can-be-interesting h2 b {
